# mcp-servers

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
crates/cpp-guidelines/: Cargo.toml
crates/cpp-guidelines/src/: cache.rs  config.rs  error.rs  main.rs  model.rs  parser.rs  search.rs  server.rs  update.rs
crates/llm-proxy/: Cargo.toml
crates/llm-proxy/src/: main.rs  rate_limit.rs  server.rs
crates/mcp-common/: Cargo.toml
crates/mcp-common/src/: embedding.rs  error.rs  lib.rs  llm_state.rs  mcp_api.rs  openai.rs  redis.rs  vectordb.rs
crates/nodejs-guidelines/: Cargo.toml
crates/nodejs-guidelines/src/: cache.rs  config.rs  error.rs  main.rs  model.rs  parser.rs  search.rs  server.rs  update.rs
crates/rust-api-guidelines/: Cargo.toml
crates/rust-api-guidelines/src/: cache.rs  config.rs  main.rs  model.rs  parser.rs  search.rs  server.rs  update.rs
