[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "llm-proxy"
path = "src/main.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "1.2"
