[package]
name = "nodejs-guidelines"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "nodejs-guidelines"
path = "src/main.rs"

[dependencies]
mcp-common = { path = "../mcp-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
schemars = "0.8"

